Update: Add more UI and fix some bugs. Create new form and select function ( login and buykey )

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     },
     "win": {
       "target": ["nsis", "portable"],
-      "icon": "build/icon.ico"
+      "icon": "img/white.png"
     },
     "nsis": {
       "oneClick": false,
